# cppl-24-homework4

./: .gitignore
Task1/: CMakeLists.txt  main.cpp  myList.h
Task2/: CMakeLists.txt  main.cpp  myList.h
